<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".favourite.FavouriteItems">

    <include
        android:id="@+id/include4"
        layout="@layout/customized_app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/showfavouriteItemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="7dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/favBhajanBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="OpenCloseBhajanList"
                    android:text="@string/FavouriteBhajan" />

                <Button
                    android:id="@+id/favSongBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    android:onClick="OpenCloseSongList"
                    android:text="@string/FavouriteSongs" />

                <Button
                    android:id="@+id/favVedamBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    android:onClick="OpenCloseVedamList"
                    android:text="@string/FavouriteVedam" />
            </LinearLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/FavItemLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="14dp"
                android:textSize="17sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="14dp"
                tools:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/favBhajanRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/favVedamRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="14dp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/favSongRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    tools:visibility="gone" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/noFavoruiteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4"
        app:layout_constraintVertical_bias="0.381"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|center"
            android:contentDescription="nodata"
            android:paddingLeft="40dp"
            android:paddingTop="40dp"
            android:paddingRight="40dp"
            app:srcCompat="@drawable/empty" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/nothing"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/noFavourite"
            android:textSize="17sp" />

    </LinearLayout>

    <include
        layout="@layout/activity_base_navigation"
        android:onClick="OpenCloseVedamList"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-118dp" />

</androidx.constraintlayout.widget.ConstraintLayout>